feat: Implement search functionality for menu, tables, modifier, order
